update responses using dto
